fixed Dark mode issues:  tree drag hover  task status colors

--- a/www/views/Extjs3/themes/Paper/src/_ext.scss
+++ b/www/views/Extjs3/themes/Paper/src/_ext.scss
@@ -1815,10 +1815,10 @@ td.grid-hd-group-cell {
 	border-top-color:#36c;
 }
 
-.x-tree-node .x-tree-drag-append a {
-	background-color:#ddd;
-	border-color:gray;
-}
+//.x-tree-node .x-tree-drag-append a {
+//	background-color:#ddd;
+//	border-color:gray;
+//}
 
 .x-dd-drop-icon::before {
 	@extend %icon;
